LPS-74555 portal-search-elasticsearch/portal-search-web: Add flag to opt out of applying aggregation filters for site facet
https://issues.liferay.com/browse/LPS-74555

--- a/modules/apps/foundation/portal-search/portal-search-web/src/main/resources/content/Language.properties
+++ b/modules/apps/foundation/portal-search/portal-search-web/src/main/resources/content/Language.properties
@@ -32,6 +32,7 @@ display-selected-result-in-context-help=Display the full context of a selected r
 display-user-facet=Display User Facet
 enable-highlighting=Enable Highlighting
 facets=Facets
+filter-aggregations=Filter aggregations
 folder-parameter-name=Folder Parameter Name
 frequency-threshold=Frequency Threshold
 general-facet-configuration=General Facet Configuration
