--- a/modules/apps/foundation/portal-search/portal-search-elasticsearch/build.gradle
+++ b/modules/apps/foundation/portal-search/portal-search-elasticsearch/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 	provided group: "org.hdrhistogram", name: "HdrHistogram", version: "2.1.8"
 	provided group: "org.osgi", name: "org.osgi.core", version: "5.0.0"
 	provided group: "org.osgi", name: "org.osgi.service.component.annotations", version: "1.3.0"
+	provided project(":apps:foundation:portal-search:portal-search")
 
 	testCompile group: "com.liferay", name: "com.liferay.petra.memory", version: "1.0.0"
 	testCompile project(":apps:foundation:portal-search:portal-search")
