--- a/modules/apps/foundation/portal-search/portal-search-test/build.gradle
+++ b/modules/apps/foundation/portal-search/portal-search-test/build.gradle
@@ -13,5 +13,8 @@ dependencies {
 	testIntegrationCompile group: "com.liferay", name: "com.liferay.journal.api", version: "2.0.0"
 	testIntegrationCompile group: "com.liferay", name: "com.liferay.journal.service", version: "3.10.0"
 	testIntegrationCompile group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
+	testIntegrationCompile group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	testIntegrationCompile project(":apps:collaboration:blogs:blogs-api")
+	testIntegrationCompile project(":apps:collaboration:blogs:blogs-service")
 	testIntegrationCompile project(":apps:foundation:portal-search:portal-search")
 }
