--- a/test.properties
+++ b/test.properties
@@ -152,161 +152,161 @@
 ##
 
     component.names=\
-        extra-apps-content-targeting,\
-        extra-apps-known-issues,\
-        \
-        liferay-connected-services-fix-packs,\
-        liferay-connected-services-known-issues,\
-        liferay-connected-services-notifications,\
-        liferay-connected-services-project-administration,\
-        liferay-connected-services-subscriptions,\
-        liferay-connected-services-user-management,\
-        \
-        marketplace,\
-        marketplace-known-issues,\
-        marketplace-plugins-1-2-1-columns-layouttpl,\
-        marketplace-plugins-1-3-1-columns-layouttpl,\
-        marketplace-plugins-1-3-2-columns-layouttpl,\
-        marketplace-plugins-2-1-2-columns-layouttpl,\
-        marketplace-plugins-3-2-3-columns-layouttpl,\
-        marketplace-plugins-akismet-portlet,\
-        marketplace-plugins-antisamy-hook,\
-        marketplace-plugins-audit-hook,\
-        marketplace-plugins-audit-portlet,\
-        marketplace-plugins-calendar-portlet,\
-        marketplace-plugins-cas-web,\
-        marketplace-plugins-chat-portlet,\
-        marketplace-plugins-ddl-form-portlet,\
-        marketplace-plugins-documentum-hook,\
-        marketplace-plugins-drools-web,\
-        marketplace-plugins-ehcache-cluster-web,\
-        marketplace-plugins-email-to-mb-filter-hook,\
-        marketplace-plugins-flash-portlet,\
-        marketplace-plugins-google-adsense-portlet,\
-        marketplace-plugins-google-maps-portlet,\
-        marketplace-plugins-ip-geocoder-portlet,\
-        marketplace-plugins-jasperreports-web,\
-        marketplace-plugins-kaleo-designer-portlet,\
-        marketplace-plugins-kaleo-forms-portlet,\
-        marketplace-plugins-kaleo-web,\
-        marketplace-plugins-knowledge-base-portlet,\
-        marketplace-plugins-localization-ja-hook,\
-        marketplace-plugins-localization-zh-hook,\
-        marketplace-plugins-logos-reftagger-portlet,\
-        marketplace-plugins-mail-portlet,\
-        marketplace-plugins-marketplace-portlet,\
-        marketplace-plugins-mb-subscription-manager-portlet,\
-        marketplace-plugins-my-subscriptions-portlet,\
-        marketplace-plugins-netvibes-widget-portlet,\
-        marketplace-plugins-notifications-portlet,\
-        marketplace-plugins-opensocial-portlet,\
-        marketplace-plugins-reports-portlet,\
-        marketplace-plugins-resources-importer-web,\
-        marketplace-plugins-saml-portlet,\
-        marketplace-plugins-scripting-executor-web,\
-        marketplace-plugins-server-manager-web,\
-        marketplace-plugins-sharepoint-hook,\
-        marketplace-plugins-social-bookmarks-hook,\
-        marketplace-plugins-social-networking-portlet,\
-        marketplace-plugins-stocks-portlet,\
-        marketplace-plugins-sync-web,\
-        marketplace-plugins-theme-loader-web,\
-        marketplace-plugins-twitter-portlet,\
-        marketplace-plugins-vimeo-portlet,\
-        marketplace-plugins-vldap-web,\
-        marketplace-plugins-weather-portlet,\
-        marketplace-plugins-web-form-portlet,\
-        marketplace-plugins-welcome-theme,\
-        marketplace-plugins-wiki-navigation-portlet,\
-        marketplace-plugins-wsrp-portlet,\
-        marketplace-plugins-wurfl-web,\
-        marketplace-plugins-wysiwyg-portlet,\
-        marketplace-plugins-youtube-portlet,\
-        marketplace-plugins-zoe-brochure-theme,\
-        marketplace-plugins-zoe-healthcare-theme,\
-        marketplace-plugins-zoe-political-theme,\
-        marketplace-plugins-zoe-resort-theme,\
-        marketplace-plugins-zoe-tech-theme,\
-        \
-        portal-acceptance,\
-        portal-apis,\
-        portal-application-standards,\
-        portal-application-standards-ee,\
-        portal-authentication,\
-        portal-authentication-ee,\
-        portal-breadcrumb,\
-        portal-business-productivity-ee,\
-        portal-calendar,\
-        portal-categories,\
-        portal-collaboration,\
-        portal-commerce,\
-        portal-configuration,\
-        portal-core-infrastructure-portal-services,\
-        portal-core-infrastructure-portal-services-ee,\
-        portal-deployment-hypersonic,\
-        portal-deployment-mysql,\
-        portal-document-library-store,\
-        portal-document-management,\
-        portal-document-management-ee,\
-        portal-frameworks,\
-        portal-infrastructure,\
-        portal-integrations,\
-        portal-knowledge-base,\
-        portal-known-issues,\
-        portal-language,\
-        portal-legacy,\
-        portal-mobile-device-rules,\
-        portal-opensocial,\
-        portal-operations,\
-        portal-performance-and-fault-tolerance-ce,\
-        portal-performance-and-fault-tolerance-ee,\
-        portal-permissions,\
-        portal-personalization-and-customization,\
-        portal-plugins-deployment,\
-        portal-plugins-osgi,\
-        portal-polls,\
-        portal-portal-services,\
-        portal-rss,\
-        portal-sample-portlet-plugins,\
-        portal-search,\
-        portal-search-ee,\
-        portal-security,\
-        portal-smoke,\
-        portal-social-networking,\
-        portal-staging,\
-        portal-staging-ee,\
-        portal-tags,\
-        portal-test-plugins,\
-        portal-testing-infrastructure,\
-        portal-theme-development,\
-        portal-tools,\
-        portal-upgrades,\
-        portal-user-interface,\
-        portal-user-management-and-portal-configuration,\
-        portal-util-misc,\
-        portal-wcd,\
-        portal-wcm,\
-        portal-web-forms-and-data-lists,\
-        portal-workflow,\
-        portal-xsl,\
-        \
-        social-office-activities,\
-        social-office-administration,\
-        social-office-calendar,\
-        social-office-collaboration,\
-        social-office-communication,\
-        social-office-document-management,\
-        social-office-environment,\
-        social-office-known-issues,\
-        social-office-legacy,\
-        social-office-microblogs,\
-        social-office-notifications,\
-        social-office-search,\
-        social-office-upgrades,\
-        social-office-user-information,\
-        social-office-wcm,\
-        \
-        support-qa
+#        extra-apps-content-targeting,\
+#        extra-apps-known-issues,\
+#        \
+#        liferay-connected-services-fix-packs,\
+#        liferay-connected-services-known-issues,\
+#        liferay-connected-services-notifications,\
+#        liferay-connected-services-project-administration,\
+#        liferay-connected-services-subscriptions,\
+#        liferay-connected-services-user-management,\
+#        \
+#        marketplace,\
+#        marketplace-known-issues,\
+#        marketplace-plugins-1-2-1-columns-layouttpl,\
+#        marketplace-plugins-1-3-1-columns-layouttpl,\
+#        marketplace-plugins-1-3-2-columns-layouttpl,\
+#        marketplace-plugins-2-1-2-columns-layouttpl,\
+#        marketplace-plugins-3-2-3-columns-layouttpl,\
+#        marketplace-plugins-akismet-portlet,\
+#        marketplace-plugins-antisamy-hook,\
+#        marketplace-plugins-audit-hook,\
+#        marketplace-plugins-audit-portlet,\
+#        marketplace-plugins-calendar-portlet,\
+#        marketplace-plugins-cas-web,\
+#        marketplace-plugins-chat-portlet,\
+#        marketplace-plugins-ddl-form-portlet,\
+#        marketplace-plugins-documentum-hook,\
+#        marketplace-plugins-drools-web,\
+#        marketplace-plugins-ehcache-cluster-web,\
+#        marketplace-plugins-email-to-mb-filter-hook,\
+#        marketplace-plugins-flash-portlet,\
+#        marketplace-plugins-google-adsense-portlet,\
+#        marketplace-plugins-google-maps-portlet,\
+#        marketplace-plugins-ip-geocoder-portlet,\
+#        marketplace-plugins-jasperreports-web,\
+#        marketplace-plugins-kaleo-designer-portlet,\
+#        marketplace-plugins-kaleo-forms-portlet,\
+#        marketplace-plugins-kaleo-web,\
+#        marketplace-plugins-knowledge-base-portlet,\
+#        marketplace-plugins-localization-ja-hook,\
+#        marketplace-plugins-localization-zh-hook,\
+#        marketplace-plugins-logos-reftagger-portlet,\
+#        marketplace-plugins-mail-portlet,\
+#        marketplace-plugins-marketplace-portlet,\
+#        marketplace-plugins-mb-subscription-manager-portlet,\
+#        marketplace-plugins-my-subscriptions-portlet,\
+#        marketplace-plugins-netvibes-widget-portlet,\
+#        marketplace-plugins-notifications-portlet,\
+#        marketplace-plugins-opensocial-portlet,\
+#        marketplace-plugins-reports-portlet,\
+#        marketplace-plugins-resources-importer-web,\
+#        marketplace-plugins-saml-portlet,\
+#        marketplace-plugins-scripting-executor-web,\
+#        marketplace-plugins-server-manager-web,\
+#        marketplace-plugins-sharepoint-hook,\
+#        marketplace-plugins-social-bookmarks-hook,\
+#        marketplace-plugins-social-networking-portlet,\
+#        marketplace-plugins-stocks-portlet,\
+#        marketplace-plugins-sync-web,\
+#        marketplace-plugins-theme-loader-web,\
+#        marketplace-plugins-twitter-portlet,\
+#        marketplace-plugins-vimeo-portlet,\
+#        marketplace-plugins-vldap-web,\
+#        marketplace-plugins-weather-portlet,\
+#        marketplace-plugins-web-form-portlet,\
+#        marketplace-plugins-welcome-theme,\
+#        marketplace-plugins-wiki-navigation-portlet,\
+#        marketplace-plugins-wsrp-portlet,\
+#        marketplace-plugins-wurfl-web,\
+#        marketplace-plugins-wysiwyg-portlet,\
+#        marketplace-plugins-youtube-portlet,\
+#        marketplace-plugins-zoe-brochure-theme,\
+#        marketplace-plugins-zoe-healthcare-theme,\
+#        marketplace-plugins-zoe-political-theme,\
+#        marketplace-plugins-zoe-resort-theme,\
+#        marketplace-plugins-zoe-tech-theme,\
+#        \
+        portal-acceptance
+#        portal-apis,\
+#        portal-application-standards,\
+#        portal-application-standards-ee,\
+#        portal-authentication,\
+#        portal-authentication-ee,\
+#        portal-breadcrumb,\
+#        portal-business-productivity-ee,\
+#        portal-calendar,\
+#        portal-categories,\
+#        portal-collaboration,\
+#        portal-commerce,\
+#        portal-configuration,\
+#        portal-core-infrastructure-portal-services,\
+#        portal-core-infrastructure-portal-services-ee,\
+#        portal-deployment-hypersonic,\
+#        portal-deployment-mysql,\
+#        portal-document-library-store,\
+#        portal-document-management,\
+#        portal-document-management-ee,\
+#        portal-frameworks,\
+#        portal-infrastructure,\
+#        portal-integrations,\
+#        portal-knowledge-base,\
+#        portal-known-issues,\
+#        portal-language,\
+#        portal-legacy,\
+#        portal-mobile-device-rules,\
+#        portal-opensocial,\
+#        portal-operations,\
+#        portal-performance-and-fault-tolerance-ce,\
+#        portal-performance-and-fault-tolerance-ee,\
+#        portal-permissions,\
+#        portal-personalization-and-customization,\
+#        portal-plugins-deployment,\
+#        portal-plugins-osgi,\
+#        portal-polls,\
+#        portal-portal-services,\
+#        portal-rss,\
+#        portal-sample-portlet-plugins,\
+#        portal-search,\
+#        portal-search-ee,\
+#        portal-security,\
+#        portal-smoke,\
+#        portal-social-networking,\
+#        portal-staging,\
+#        portal-staging-ee,\
+#        portal-tags,\
+#        portal-test-plugins,\
+#        portal-testing-infrastructure,\
+#        portal-theme-development,\
+#        portal-tools,\
+#        portal-upgrades,\
+#        portal-user-interface,\
+#        portal-user-management-and-portal-configuration,\
+#        portal-util-misc,\
+#        portal-wcd,\
+#        portal-wcm,\
+#        portal-web-forms-and-data-lists,\
+#        portal-workflow,\
+#        portal-xsl,\
+#        \
+#        social-office-activities,\
+#        social-office-administration,\
+#        social-office-calendar,\
+#        social-office-collaboration,\
+#        social-office-communication,\
+#        social-office-document-management,\
+#        social-office-environment,\
+#        social-office-known-issues,\
+#        social-office-legacy,\
+#        social-office-microblogs,\
+#        social-office-notifications,\
+#        social-office-search,\
+#        social-office-upgrades,\
+#        social-office-user-information,\
+#        social-office-wcm,\
+#        \
+#        support-qa
 
 ##
 ## Database
@@ -1070,74 +1070,75 @@
     test.batch.max.subgroup.size=3
 
     test.batch.names=\
-        bundle-blacklist-restart-jdk8,\
-        compile-jsp-jdk8,\
-        empty-temp-dir-jdk8,\
-        #functional-bundle-tomcat-mysql56-jdk8,\
-        functional-smoke-jboss70-mysql56-jdk8,\
-        #functional-smoke-resin40-mysql56-jdk8,\
-        functional-smoke-tcserver32-mysql56-jdk8,\
-        functional-smoke-tomcat80-db2105-jdk8,\
-        functional-smoke-tomcat80-mariadb100-jdk8,\
-        functional-smoke-tomcat80-mysql56-jdk8,\
-        functional-smoke-tomcat80-oracle121-jdk8,\
-        functional-smoke-tomcat80-postgresql94-jdk8,\
-        functional-smoke-tomcat80-sybase160-jdk8,\
-        functional-smoke-weblogic121-mysql56-jdk8,\
-        functional-smoke-websphere85-mysql56-jdk8,\
-        functional-smoke-wildfly100-mariadb100-jdk8,\
-        functional-tomcat80-hypersonic20-jdk8,\
-        functional-tomcat80-mysql56-jdk8,\
-        functional-tomcat80-mysql56-jdk8-quarantine,\
-        functional-upgrade-jboss70-mysql56-jdk8,\
-        #functional-upgrade-tcserver32-mysql56-jdk8,\
-        functional-upgrade-tomcat80-mariadb100-jdk8,\
-        functional-upgrade-tomcat80-mysql56-jdk8,\
-        functional-upgrade-tomcat80-oracle121-jdk8,\
-        functional-upgrade-tomcat80-postgresql94-jdk8,\
-        functional-upgrade-tomcat80-sybase160-jdk8,\
-        #functional-upgrade-weblogic121-mysql56-jdk8,\
-        functional-upgrade-wildfly100-mariadb100-jdk8,\
-        integration-db2105-jdk8,\
-        integration-hypersonic20-jdk8,\
-        integration-mariadb100-jdk8,\
-        integration-mysql56-jdk8,\
-        integration-oracle121-jdk8,\
-        integration-postgresql94-jdk8,\
-        integration-sybase160-jdk8,\
-        javadoc-jdk8,\
-        lpkg-controller-jdk8,\
-        lpkg-override-jdk8,\
-        lpkg-persistence-jdk8,\
-        lpkg-release-jdk8,\
-        lpkg-startup-jdk8,\
-        modules-compile-jdk8,\
-        modules-functional-jdk8,\
-        modules-functional-tomcat80-mysql56-jdk8,\
-        modules-integration-db2105-jdk8,\
-        modules-integration-hypersonic20-jdk8,\
-        modules-integration-mariadb100-jdk8,\
-        modules-integration-mysql56-jdk8,\
-        modules-integration-oracle121-jdk8,\
-        modules-integration-postgresql94-jdk8,\
-        modules-integration-sybase160-jdk8,\
-        modules-unit-jdk8,\
-        plugins-compile-jdk8,\
-        plugins-functional-bundle-tomcat-mysql56-jdk8,\
-        plugins-functional-tomcat80-mysql56-jdk8,\
-        portal-frontend-js-jdk8,\
-        #portal-frontend-js-lint-jdk8,\
-        portal-license-jdk8,\
-        portal-startup-space-in-path-jdk8,\
-        portal-web-jdk8,\
-        ruby-sass-compiler-jdk8,\
-        semantic-versioning-jdk8,\
-        service-builder-jdk8,\
-        slim-profile-jdk8,\
-        source-format-jdk8,\
-        tck-jdk8,\
-        unit-jdk8,\
-        wsdd-builder-jdk8
+#        bundle-blacklist-restart-jdk8,\
+#        compile-jsp-jdk8,\
+#        empty-temp-dir-jdk8,\
+#        #functional-bundle-tomcat-mysql56-jdk8,\
+#        functional-smoke-jboss70-mysql56-jdk8,\
+#        #functional-smoke-resin40-mysql56-jdk8,\
+#        functional-smoke-tcserver32-mysql56-jdk8,\
+#        functional-smoke-tomcat80-db2105-jdk8,\
+#        functional-smoke-tomcat80-mariadb100-jdk8,\
+#        functional-smoke-tomcat80-mysql56-jdk8,\
+#        functional-smoke-tomcat80-oracle121-jdk8,\
+#        functional-smoke-tomcat80-postgresql94-jdk8,\
+#        functional-smoke-tomcat80-sybase160-jdk8,\
+#        functional-smoke-weblogic121-mysql56-jdk8,\
+#        functional-smoke-websphere85-mysql56-jdk8,\
+#        functional-smoke-wildfly100-mariadb100-jdk8,\
+#        functional-tomcat80-hypersonic20-jdk8,\
+#        functional-tomcat80-mysql56-jdk8,\
+#        functional-tomcat80-mysql56-jdk8-quarantine,\
+#        functional-upgrade-jboss70-mysql56-jdk8,\
+#        #functional-upgrade-tcserver32-mysql56-jdk8,\
+#        functional-upgrade-tomcat80-mariadb100-jdk8,\
+#        functional-upgrade-tomcat80-mysql56-jdk8,\
+#        functional-upgrade-tomcat80-oracle121-jdk8,\
+#        functional-upgrade-tomcat80-postgresql94-jdk8,\
+#        functional-upgrade-tomcat80-sybase160-jdk8,\
+#        #functional-upgrade-weblogic121-mysql56-jdk8,\
+#        functional-upgrade-wildfly100-mariadb100-jdk8,\
+#        integration-db2105-jdk8,\
+#        integration-hypersonic20-jdk8,\
+#        integration-mariadb100-jdk8,\
+#        integration-mysql56-jdk8,\
+#        integration-oracle121-jdk8,\
+#        integration-postgresql94-jdk8,\
+#        integration-sybase160-jdk8,\
+#        javadoc-jdk8,\
+#        lpkg-controller-jdk8,\
+#        lpkg-override-jdk8,\
+#        lpkg-persistence-jdk8,\
+#        lpkg-release-jdk8,\
+#        lpkg-startup-jdk8,\
+#        modules-compile-jdk8,\
+#        modules-functional-jdk8,\
+#        modules-functional-tomcat80-mysql56-jdk8,\
+#        modules-integration-db2105-jdk8,\
+#        modules-integration-hypersonic20-jdk8,\
+#        modules-integration-mariadb100-jdk8,\
+        modules-integration-mysql56-jdk8
+#        modules-integration-oracle121-jdk8,\
+#        modules-integration-postgresql94-jdk8,\
+#        modules-integration-sybase160-jdk8,\
+#        modules-unit-jdk8,\
+#        plugins-compile-jdk8,\
+#        plugins-functional-bundle-tomcat-mysql56-jdk8,\
+#        plugins-functional-tomcat80-mysql56-jdk8,\
+#        portal-frontend-js-jdk8,\
+#        portal-frontend-js-lint-jdk8,\
+#        portal-license-jdk8,\
+#        portal-startup-space-in-path-jdk8,\
+#        portal-web-jdk8,\
+#        ruby-sass-compiler-jdk8,\
+#        semantic-versioning-jdk8,\
+#        service-builder-jdk8,\
+#        slim-profile-jdk8,\
+#        source-format-jdk8,\
+#        tck-jdk8,\
+#        unit-jdk8,\
+#        wsdd-builder-jdk8
+
 
     test.batch.names[subrepository-validation]=\
         subrepository-compile-jdk8,\
